<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <ImageView
          android:id="@+id/tosettings_img_exit"
          android:layout_width="@dimen/bottomSize"
          android:layout_height="@dimen/bottomSize"
          android:layout_marginLeft="@dimen/FrameMargin"
          android:layout_marginBottom="@dimen/FrameMargin"
          android:layout_gravity="bottom"
          android:src="@drawable/ico_home"/>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginLeft="20dp"
          android:orientation="horizontal">

          <LinearLayout
              android:id="@+id/tosettings_layout_password"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:visibility="gone">

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:orientation="horizontal">

                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="90dp"
                      android:text="@string/settingspw"
                      android:layout_marginRight="20dp"
                      android:gravity="center"
                      android:textColor="@color/uitvcolor"
                      android:textSize="30dp" />

                  <EditText
                      android:id="@+id/tosettings_edit_password"
                      android:layout_width="520dp"
                      android:layout_height="70dp"
                      android:layout_marginRight="30dp"
                      android:textColor="@color/uitvcolor"
                      android:textAlignment="center"
                      android:inputType="numberPassword"
                      android:textSize="27dp"
                      android:background="@drawable/stroke_edit"/>

              </LinearLayout>

          </LinearLayout>

          <LinearLayout
              android:id="@+id/tosettings_layout_settings"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:visibility="visible"
              android:orientation="vertical">

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:layout_marginBottom="30dp"
                  android:orientation="horizontal">

                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="90dp"
                      android:layout_marginRight="20dp"
                      android:text="@string/settingsnewpw"
                      android:gravity="center"
                      android:textColor="@color/uitvcolor"
                      android:textSize="30dp" />

                  <EditText
                      android:id="@+id/tosettings_edit_newpassword"
                      android:layout_width="520dp"
                      android:layout_height="70dp"
                      android:layout_marginRight="30dp"
                      android:textColor="@color/uitvcolor"
                      android:textAlignment="center"
                      android:inputType="numberPassword"
                      android:textSize="27dp"
                      android:background="@drawable/stroke_edit"/>

              </LinearLayout>

              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:layout_marginLeft="50dp"
                  android:orientation="horizontal">

                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:background="#fff"
                      android:layout_marginRight="80dp">

                      <Button
                          android:id="@+id/tosettings_btn_newpw"
                          android:layout_width="285dp"
                          android:layout_height="80dp"
                          android:layout_margin="1.5dp"
                          android:text="@string/settingsnewpw"
                          android:textColor="@color/uitvcolor"
                          android:textSize="29dp"
                          android:textAllCaps="false"
                          android:background="@drawable/stroke"/>

                  </LinearLayout>

                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:background="#fff"
                      android:layout_marginRight="80dp">

                      <Button
                          android:id="@+id/tosettings_btn_toset"
                          android:layout_width="285dp"
                          android:layout_height="80dp"
                          android:layout_margin="1.5dp"
                          android:text="@string/tosettings"
                          android:textColor="@color/uitvcolor"
                          android:textSize="29dp"
                          android:textAllCaps="false"
                          android:background="@drawable/stroke"/>
                  </LinearLayout>

              </LinearLayout>


          </LinearLayout>


      </LinearLayout>

    </FrameLayout>


</LinearLayout>